force-app/main/default/objects/Funding_Award__c/Funding_Award__c.object-meta.xml
<CustomObject>
    <label>Funding Award</label>
    <nameField>
        <displayFormat>FAW-{0}</displayFormat>
        <label>Funding Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>