force-app/main/default/objects/Funding_Award__c/fields/AdditionalInfoForWhichReport__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfoForWhichReport__c</fullName>
    <label>Additional Info For Which Report?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Performance Report</fullName>
            </value>
            <value>
                <fullName>Expenditure Report</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>