force-app/main/default/objects/Funding_Award__c/fields/AdditionalInformationForWhichCycle__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformationForWhichCycle__c</fullName>
    <label>Additional information for which cycle?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reporting Cycle 1</fullName>
            </value>
            <value>
                <fullName>Reporting Cycle 2</fullName>
            </value>
            <value>
                <fullName>Reporting Cycle 3</fullName>
            </value>
            <value>
                <fullName>Reporting Cycle 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>