force-app/main/default/objects/Funding_Award__c/fields/AddRemarksForAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>AddRemarksForAdditionalDetails__c</fullName>
    <label>Add Remarks for Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>