force-app/main/default/objects/Funding_Award__c/fields/ApplyForExtension__c.field-meta.xml
<CustomField>
    <fullName>ApplyForExtension__c</fullName>
    <label>Apply for Extension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>