force-app/main/default/objects/Funding_Award__c/fields/ConditionalApprovalComments__c.field-meta.xml
<CustomField>
    <fullName>ConditionalApprovalComments__c</fullName>
    <label>Conditional Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>