force-app/main/default/objects/Funding_Award__c/fields/Final_Carry_Forward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Carry_Forward_Amount__c</fullName>
    <label>Final Carry Forward Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>