force-app/main/default/objects/Funding_Award__c/fields/Final_Interest_Earned__c.field-meta.xml
<CustomField>
    <fullName>Final_Interest_Earned__c</fullName>
    <formula>Funding_Application__r.MinusEstimatedCarryForwardAmount__c - Funding_Application__r.MinusEstimatedInterestEarned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Interest Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>