force-app/main/default/objects/Funding_Award__c/fields/Funding_Application__c.field-meta.xml
<CustomField>
    <fullName>Funding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Application</label>
    <referenceTo>Funding_Application__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>