force-app/main/default/objects/Funding_Award__c/fields/GrantAmount__c.field-meta.xml
<CustomField>
    <fullName>GrantAmount__c</fullName>
    <label>Grant Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>