force-app/main/default/objects/Funding_Award__c/fields/LetterOfIntent__c.field-meta.xml
<CustomField>
    <fullName>LetterOfIntent__c</fullName>
    <label>Letter of Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>