force-app/main/default/objects/Funding_Award__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>DSF</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>