force-app/main/default/objects/Funding_Award__c/fields/ReportingEndDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingEndDate__c</fullName>
    <label>Reporting End Date</label>
    <type>Date</type>
</CustomField>