force-app/main/default/objects/Funding_Award__c/fields/ReportingFinalized__c.field-meta.xml
<CustomField>
    <fullName>ReportingFinalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Finalized</label>
    <type>Checkbox</type>
</CustomField>