force-app/main/default/objects/Funding_Award__c/fields/ReportingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingStartDate__c</fullName>
    <label>Reporting Start Date</label>
    <type>Date</type>
</CustomField>