force-app/main/default/objects/Funding_Award__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Service Agreement Finalized</fullName>
            </value>
            <value>
                <fullName>Approval Letter Generated</fullName>
            </value>
            <value>
                <fullName>Finance Process Complete</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Reporting Finalized</fullName>
            </value>
            <value>
                <fullName>Finance Closeout Process Complete</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>